src/test/ui/issues/issue-28134.stderr
error: only functions may be used as tests
  --> $DIR/issue-28134.rs:13:1
   |
LL | #![test] //~ ERROR only functions may be used as tests
   | ^^^^^^^^

error: aborting due to previous error

